--- a/src/app/presentation/auth-ui/login/login.component.html
+++ b/src/app/presentation/auth-ui/login/login.component.html
@@ -30,7 +30,7 @@
                 </div>
                
                 <div class="text-center mt-4 font-weight-light">
-                    Vous n'avez pas de compte ? <a  class="text-primary">Créer</a>
+                    Vous n'avez pas de compte ? <a routerLink="/auth/register" class="text-primary">Créer</a>
                 </div>
               </form>
             </div>
