--- a/src/app/presentation/auth-ui/register/register.component.html
+++ b/src/app/presentation/auth-ui/register/register.component.html
@@ -1,1 +1,53 @@
-<p>register works!</p>
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+      <div class="content-wrapper d-flex align-items-center auth px-0">
+        <div class="row w-100 mx-0">
+          <div class="col-lg-4 mx-auto">
+            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+              <!-- <div class="brand-logo">
+                <img src="../../images/logo.svg" alt="logo">
+              </div> -->
+              <h4>IGAP</h4>
+              <h6 class="font-weight-light">L'inscription est simple. Cela ne prend que quelques étapes</h6>
+              <form class="pt-3">
+                <div class="form-group">
+                  <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                </div>
+                <div class="form-group">
+                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                </div>
+                
+                <div class="form-group">
+                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="mb-4">
+                  <div class="form-check">
+                    <label class="form-check-label text-muted">
+                      <input type="checkbox" class="form-check-input">
+                      J'accepte tous les termes et conditions
+                    </label>
+                  </div>
+                </div>
+                <div class="mt-3">
+                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" >S'inscrire</a>
+                </div>
+                <div class="text-center mt-4 font-weight-light">
+                    Vous avez déjà un compte ? <a routerLink="/auth/login" class="text-primary">Se connecter</a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+    </div>
+   
+  </div>
+
+  <script src="vendors/js/vendor.bundle.base.js"></script>
+
+  <script src="js/off-canvas.js"></script>
+  <script src="js/hoverable-collapse.js"></script>
+  <script src="js/template.js"></script>
+  <script src="js/settings.js"></script>
+  <script src="js/todolist.js"></script>
