--- a/src/app/presentation/shared/side-nav/side-nav.component.html
+++ b/src/app/presentation/shared/side-nav/side-nav.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" >
+        <a class="nav-link" routerLink="/dashboard/home">
           <i class="icon-grid menu-icon"></i>
           <span class="menu-title">Dashboard</span>
         </a>
@@ -9,14 +9,12 @@
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
           <i class="icon-layout menu-icon"></i>
-          <span class="menu-title">UI Elements</span>
+          <span class="menu-title">Pages</span>
           <i class="menu-arrow"></i>
         </a>
         <div class="collapse" id="ui-basic">
           <ul class="nav flex-column sub-menu">
-            <li class="nav-item"> <a class="nav-link" >Buttons</a></li>
-            <li class="nav-item"> <a class="nav-link" >Dropdowns</a></li>
-            <li class="nav-item"> <a class="nav-link">Typography</a></li>
+            <li class="nav-item"> <a class="nav-link" routerLink="/dashboard/agents" >Agents</a></li>
           </ul>
         </div>
       </li>
