--- a/src/app/presentation/shared/agents-form/agents.component.css
+++ b/src/app/presentation/shared/agents-form/agents.component.css
@@ -1,5 +1,5 @@
 .form-container {
-    background: #fff;
+    /* background: #fff; */
     padding: 20px 30px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
