--- a/src/app/presentation/shared/agents-form/agents.component.html
+++ b/src/app/presentation/shared/agents-form/agents.component.html
@@ -56,17 +56,17 @@
                     <input type="text" id="num_piece_identite" name="num_piece_identite" class="form-control form-control-lg" formControlName="identityCardNumber" required>
                 </div>
                 <div class="col">
-                    <label for="date_deliv_piece_identite">Date de délivrance pièce d'identité</label>
+                    <label for="date_deliv_piece_identite">Date de délivrance </label>
                     <input type="text" id="date_deliv_piece_identite" name="date_deliv_piece_identite" class="form-control form-control-lg" formControlName="identityCardIssueDate" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <label for="lieu_deliv_piece_identite">Lieu de délivrance pièce d'identité</label>
+                    <label for="lieu_deliv_piece_identite">Lieu de délivrance </label>
                     <input type="text" id="lieu_deliv_piece_identite" name="lieu_deliv_piece_identite" class="form-control form-control-lg" formControlName="identityCardIssuePlace" required>
                 </div>
                 <div class="col">
-                    <label for="date_expir_piece_identite">Date d’expiration pièce d'identité</label>
+                    <label for="date_expir_piece_identite">Date d’expiration </label>
                     <input type="date" id="date_expir_piece_identite" name="date_expir_piece_identite" class="form-control form-control-lg" formControlName="identityCardExpiryDate" required>
                 </div>
             </div>
@@ -536,7 +536,7 @@
                         <input type="text" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                     <div class="col">
-                        <label for="telephone">Nature pièce/titre (Dipl, Attest, Certific, etc)</label>
+                        <label for="telephone">Nature pièce/titre </label>
                         <input type="text" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                 </div>
@@ -557,13 +557,13 @@
                         <input type="text" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                     <div class="col">
-                        <label for="telephone">Nature pièce/titre (Dipl, Attest, Certific, etc)</label>
+                        <label for="telephone">Nature pièce/titre</label>
                         <input type="text" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <label for="telephone">Référence pièce/titre</label>
+                        <label for="telephone">Référence titre</label>
                         <input type="text" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                     <div class="col">
@@ -571,7 +571,7 @@
                         <input type="date" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                     <div class="col">
-                        <label for="telephone">Pourcentage obtenu(e)</label>
+                        <label for="telephone">Pourcentage</label>
                         <input type="number" id="email" name="email" class="form-control form-control-lg" required>
                     </div>
                 </div>
@@ -654,7 +654,7 @@
                         <h2>Commission d'affectation</h2>
                         <div class="row">
                             <div class="col">
-                                <label for="telephone">Avez-vous une Com.Aff « OUI ou NON »</label>
+                                <label for="telephone">Avez-vous une Com.Aff </label>
                                 <select id="genre" name="genre" class="form-control form-control-lg" required>
                                     <option value="">Sélectionnez</option>
                                     <option value="masculin">Oui</option>
@@ -723,7 +723,7 @@
                                     </select>
                                 </div>
                                 <div class="col">
-                                    <label for="telephone">Possession carte biometrique</label>
+                                    <label for="telephone">Possession carte</label>
                                     <select id="genre" name="genre" class="form-control form-control-lg" formControlName="hasBiometricCard" required>
                                         <option value="">Sélectionnez</option>
                                         <option value="masculin">Oui</option>
@@ -731,7 +731,7 @@
                                     </select>
                                 </div>
                                 <div class="col">
-                                    <label for="telephone">Numero carte biometrique</label>
+                                    <label for="telephone">Numero carte </label>
                                     <input type="text" id="email" name="email" class="form-control form-control-lg" formControlName="biometricCardNumber" required>
                                 </div>
                             </div>
