--- a/src/app/presentation/auth-ui/login/login.component.html
+++ b/src/app/presentation/auth-ui/login/login.component.html
@@ -9,15 +9,15 @@
               </div> -->
               <h4>IGAP</h4>
               <h6 class="font-weight-light">Connectez-vous pour continuer.</h6>
-              <form class="pt-3">
+              <form class="pt-3" [formGroup]="loginForm">
                 <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
+                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email"  formControlName="email">
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password" formControlName="password">
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"  routerLink="/dashboard/home">Se connecter</a>
+                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" (click)="onLogin()">Se connecter</a>
                 </div>
                 <div class="my-2 d-flex justify-content-between align-items-center">
                   <div class="form-check">
